fix broken styles for result items

--- a/styles/_resultlist.scss
+++ b/styles/_resultlist.scss
@@ -1,3 +1,4 @@
 .resultList {
+	background-color: #cecece;
 	padding: 0;
 }
