--- a/styles/index.scss
+++ b/styles/index.scss
@@ -20,8 +20,9 @@
 	background-color: white;
 	width: 100%;
 	padding: 10px;
-	border-top-right-radius: 10px;
-	border-top-left-radius: 10px;
+  -webkit-box-shadow: 1px 1px 5px 1px rgba(0,0,0,0.18);
+  -moz-box-shadow: 1px 1px 5px 1px rgba(0,0,0,0.18);
+  box-shadow: 1px 1px 5px 1px rgba(0,0,0,0.18);
 }
 
 .bigcommerceLogo img {
